--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-firebase-config",
-  "version": "8.0.0",
+  "version": "8.0.0-NTL4",
   "description": "Cordova plugin for Firebase Remote Config",
   "types": "./types/index.d.ts",
   "cordova": {
